--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Banner with Carousel & Video Background</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <script type='text/javascript' src='https://www.google.com/jsapi'></script>
 
 </head>
@@ -59,14 +60,36 @@
                     </video>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#videoCarousel" data-bs-slide="prev">
+            
+            <!-- <button class="carousel-control-prev" type="button" data-bs-target="#videoCarousel" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#videoCarousel" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
-            </button>
+            </button> -->
+        </div>
+        <div class="banner-buttons">
+            <a href="#" class="btn request-callback">Request a Callback</a>
+            <a href="#" class="btn enroll-now">Enroll Now</a>
+        </div>
+        <div class="banner-bottom">
+            <div class="announcement">
+                <p>ANNOUNCEMENTS</p>
+                <span class="speaker-icon">&#128264;</span>
+                <p>Admissions are open for the academic year 2021-22</p>
+            </div>
+
+            <div class="pre" style=" display: flex; align-items: center; gap: 14px; margin-left: 10px;">
+                <div class="arrow-controls">
+                    <button class="prev">&#9664;</button>
+                    <button class="next">&#9654;</button>
+                </div>
+                <div class="card">
+                    <p>Empowering students to create solutions for tomorrow's challenges</p>
+                </div>
+            </div>
         </div>
 
     </div>
@@ -147,8 +170,7 @@
     <!-- India Map Image -->
     <div class="map-container" style="position:relative;">
         <img src="images/458508.jpg" alt="Background Image" class="background-image">
-        <img src="images/F97E3234.png" alt="India Map" id="indiaMap" class="indiaMap"
-            style="width: 51%;height:auto;padding-left: 134px;margin-left: 324px;">
+        <img src="images/F97E3234.png" alt="India Map" id="indiaMap" class="indiaMap">
 
         <!-- Location pointers on the map -->
         <div class="location-pointer" data-location="Maharashtra - Nashik & Nagpur" style="top:50%; left:40%;"></div>
@@ -283,60 +305,6 @@
     <!-- ****************************************************************************************************************************************************** -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="main.js"></script>
-
-    <!-- <script type="text/javascript">
-        google.load('visualizations', '1', {
-            'packages': ['geochart']
-        });
-        google.setOnLoadCallback(drawVisualization);
-
-        function drawVisualization() {
-            var data = google.visualization.arrayToDataTable([
-                ['Region Code', 'Location', {
-                    role: 'tooltip',
-                    'p': {
-                        'html': true
-                    }
-                }],
-                ['IN-MH', 'Maharashtra - Nashik & Nagpur', createCustomTooltip('Maharashtra')],
-                ['IN-GJ', 'Gujarat', createCustomTooltip('Gujarat')],
-                ['IN-RJ', 'Rajasthan', createCustomTooltip('Rajasthan')],
-                ['IN-DL', 'Delhi', createCustomTooltip('Delhi')],
-                ['IN-KA', 'Karnataka', createCustomTooltip('Karnataka')],
-                ['IN-TG', 'Hyderabad (Telangana)', createCustomTooltip('Hyderabad (Telangana)')],
-                ['IN-CT', 'Chhattisgarh', createCustomTooltip('Chhattisgarh')]
-            ]);
-
-            var options = {
-                region: 'IN',
-                domain: 'IN',
-                displayMode: 'regions',
-                resolution: 'provinces',
-                colorAxis: {
-                    colors: ['#e5ef88', '#d4b114', '#e85a03']
-                },
-                backgroundColor: '#81d4fa',
-                datalessRegionColor: '#f5f5f5',
-                tooltip: {
-                    isHtml: true
-                },
-                width: 900,
-                height: 380
-            };
-
-            var geochart = new google.visualization.GeoChart(document.getElementById('visualizations'));
-            geochart.draw(data, options);
-        }
-
-        function createCustomTooltip(location) {
-            return '<div style="padding:10px; border-radius:5px; height:auto; background-color:#fff; border: 1px solid #ccc;">' +
-                '<h4 style="margin: 0; font-size: 14px;">SHM Shipcare</h4>' +
-                '<p style="margin: 5px 0 0 0; font-size: 12px;">Location: ' + location + '</p>' +
-                '<p style="color: red;"> View Map</p>' +
-                '</div>';
-        }
-    </script> -->
-
 
 
 </body>
