--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <!-- Video background -->
+    <!-- Video background 3 -->
     <!-- <video class="video-background" autoplay muted loop>
   <source src="video.mp4" type="video/mp4">
   
